force-app/main/default/objects/Guest__c/Guest__c.object-meta.xml
<CustomObject>
    <description>Guest object is used by Entertainment Event app</description>
    <label>Guest</label>
    <nameField>
        <displayFormat>GUEST-{000000}</displayFormat>
        <label>Guest No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>