force-app/main/default/objects/Guest__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <description>Indicates whether the Invited Guest actually attended the event after accepting.</description>
    <inlineHelpText>Has this guest actually attended this event?</inlineHelpText>
    <label>Attended?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Late Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>