force-app/main/default/objects/Guest__c/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Guest invited via Contact</inlineHelpText>
    <label>Guest Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Entertainment Events</relationshipLabel>
    <relationshipName>Guests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>