force-app/main/default/objects/Guest__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>Guest_Name__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This information comes from Contact record.</inlineHelpText>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>