force-app/main/default/objects/Guest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Guest_Name__c</columns>
    <columns>Guest_Title__c</columns>
    <columns>Guest_Organisation__c</columns>
    <columns>Event__c</columns>
    <columns>Reason_for_Invitation__c</columns>
    <columns>Comment__c</columns>
    <columns>Total_Opportunity_Revenue__c</columns>
    <columns>Organisation_Revenue_Current_FY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>