force-app/main/default/objects/Guest__c/listViews/Guest_List_Update_Attendees.listView-meta.xml
<ListView>
    <fullName>Guest_List_Update_Attendees</fullName>
    <columns>NAME</columns>
    <columns>Guest_Name__c</columns>
    <columns>Guest_Organisation__c</columns>
    <columns>Event__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Invited__c</columns>
    <columns>Has_Guest__c</columns>
    <columns>Accepted__c</columns>
    <columns>Attended__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>Guest List - Update Attendees</label>
</ListView>