force-app/main/default/objects/Guest__c/listViews/My_Guest_List_All_Events.listView-meta.xml
<ListView>
    <fullName>My_Guest_List_All_Events</fullName>
    <columns>NAME</columns>
    <columns>Guest_Name__c</columns>
    <columns>Guest_Organisation__c</columns>
    <columns>Event__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Invited__c</columns>
    <columns>Has_Guest__c</columns>
    <columns>Accepted__c</columns>
    <columns>Attended__c</columns>
    <columns>Email__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Guest List - All Events</label>
</ListView>